# TP_Sockets

./: .gitignore  CMakeLists.txt  REAME.md  main.c
task3/: tcp_client.c  tcp_server.c
task4/: udp_client.c  udp_server.c
task5_part1/: server_concurrent.c
task5_part2/: client_t5p2.c  data.txt  server_t5p2.c
